# mmigrator

./: .gitignore  LICENSE  README.md  package.sh  pyproject.toml  requirements.txt
src/: cli.py  config_manager.py  main.py  migration.py  migration_manager.py
src/mmigrator/: __init__.py  cli.py  config_manager.py  constants.py  db.py  migration.py  migration_manager.py  process.py
src/mmigrator/config_manager/: config_manager.py  helpers.py
tests/: helpers.py  test_migration_manager.py
