[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmigrator"
version = "0.0.5"
authors = [
  { name="Serhii Kovalov", email="moiserge.k@gmail.com" },
]
description = "Migration engine for pymongo"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'pydantic==1.10.7',
    'pymongo==4.3.3',
    'snakecase==1.0.1'
]

[project.urls]
"Homepage" = "https://github.com/sergekovalev/mmigrator"
"Bug Tracker" = "https://github.com/sergekovalev/mmigrator/issues"