[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmigrator"
version = "0.2.4"
authors = [
  { name="Serhii Kovalov", email="moiserge.k@gmail.com" },
]
description = "Migration engine for MongoDB"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'pydantic',
    'pymongo',
    'snakecase'
]

[project.scripts]
mmigrator = "mmigrator.cli:main"

[project.urls]
"Homepage" = "https://github.com/sergekovalev/mmigrator"
"Bug Tracker" = "https://github.com/sergekovalev/mmigrator/issues"
